--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="CSS/index.css">
+        <title>Placeholder</title>
+    </head>
+    <body>
+        <ul>
+            <li><a href="#">Testing</a></li>
+            <li><a href="#">some</a></li>
+            <li><a href="#">cool</a></li>
+            <li><a href="#">shit</a></li>
+        </ul>
+    </body>
 </html>
