Primeros bocetos de páginas

--- a/index.html
+++ b/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="CSS/index.css">
-        <title>Placeholder</title>
-    </head>
-    <body>
-        <ul>
-            <li><a href="#">Testing</a></li>
-            <li><a href="#">some</a></li>
-            <li><a href="#">cool</a></li>
-            <li><a href="#">shit</a></li>
-        </ul>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/index.css">
+    <title>Placeholder</title>
+</head>
+<body>
+    <header>
+        <div class ="barra_izquierda">
+            <ul class = "menu_izquierda" >
+                <li><a href="about.html">Nosotros </a></li>
+                <li><a href="#">Contacto </a></li>
+                <li><a href="gamepublish.html">Publicar </a></li>
+                <li><a href="catalogo.html">Catalogo</a></li>
+            </ul>
+        </div>
+
+        <div class = "logo_center">
+            <a href="/">
+                <img src="images/logo.png" alt="Logo" width="50" height="50">
+            </a>
+        </div>
+
+        <div class= "barra_derecha">
+            <ul class = "menu_derecha" >
+                <li>
+                    <a href="https://www.twitter.com/gabrielboric">
+                        <img src="images/twistter.png" alt="Logo" width="30" height="30">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/gabrielboric">
+                        <img src="images/CuckStagram.png" alt="Logo" width="30" height="30">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/gabrielboric">
+                        <img src="images/caraLibro.png" alt="Logo" width="30" height="30">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/gabrielboric">
+                        <img src="images/twistter.png" alt="Logo" width="30" height="30">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </header>      
+</body>
 </html>
