--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/index.css">
     <title>Placeholder</title>
 </head>
-<body>
+<body> <!---->
     <header>
         <div class ="barra_izquierda">
             <ul class = "menu_izquierda" >
@@ -28,6 +28,21 @@
         <div class= "barra_derecha">
             <ul class = "menu_derecha" >
                 <li>
+                    <a href="login.html">Iniciar Sesión</a>
+                </li>
+            </ul>
+        </div>
+        
+    </header>   
+    <div class="cuerpo">
+        AAAAAA <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia tempora numquam voluptatem neque hic labore iusto unde ipsam quaerat rerum?
+    </div>
+    
+    <footer class="footer">
+        <div class= "barra_derecha">
+            <ul class = "menu_derecha" >
+                <li>
                     <a href="https://www.twitter.com/gabrielboric">
                         <img src="images/twistter.png" alt="Logo" width="30" height="30">
                     </a>
@@ -42,13 +57,8 @@
                         <img src="images/caraLibro.png" alt="Logo" width="30" height="30">
                     </a>
                 </li>
-                <li>
-                    <a href="https://www.twitter.com/gabrielboric">
-                        <img src="images/twistter.png" alt="Logo" width="30" height="30">
-                    </a>
-                </li>
             </ul>
         </div>
-    </header>      
+    </footer>
 </body>
 </html>
