--- a/about.html
+++ b/about.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PORNHUB 2</title>
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/about.css">
+    <title>Sobre nosotros</title>
 </head>
 <body>
+    <header>
+        <div class ="barra_izquierda">
+            <ul class = "menu_izquierda" >
+                <li><a href="about.html">Perfil </a></li>
+                <li><a href="#">Contacto </a></li>
+                <li><a href="catalogo.html">Catalogo</a></li>
+            </ul>
+        </div>
+
+        <div class = "logo_center">
+            <a href="/">
+                <img src="images/logo.png" alt="Logo" width="50" height="50">
+            </a>
+        </div>
+
+        <div class= "barra_derecha">
+            <ul class = "menu_derecha" >
+                
+                <li>
+                    <a href="https://www.twitter.com/gabrielboric">
+                        <img src="images/twistter.png" alt="Logo" width="30" height="30">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/gabrielboric">
+                        <img src="images/CuckStagram.png" alt="Logo" width="30" height="30">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/gabrielboric">
+                        <img src="images/caraLibro.png" alt="Logo" width="30" height="30">
+                    </a>
+                </li>
+
+                <li>
+                    <a href="login.html">Iniciar Sesión</a>
+                </li>
+
+            </ul>
+        </div>
+    </header>
     <h1>Nuevo pase de batalla</h1>
+    
 </body>
 </html>
