--- a/login.html
+++ b/login.html
@@ -31,15 +31,15 @@
         </div>
     </header>
     <div class="cuerpo">
-        <form action="login.html" method="post" class="form">
+        <form action="login.html" method="get" class="form">
             <h2>Ingrese sus datos</h2>
             <div class="campo">
                 <label for="user">Usuario:</label>
-                <input type="text" id="user" placeholder="Nombre usuario">
+                <input type="text" id="user" placeholder="Nombre usuario" name="user">
             </div>
             <div class="campo">
                 <label for="password">Contraseña:</label>
-                <input type="password" id="password" placeholder="Contraseña">
+                <input type="password" id="password" placeholder="Contraseña" name="password">
             </div>
             <button type="submit">Iniciar sesion</button>
         </form>
