--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/catalogo.css">
     <title>Placeholder</title>
 </head>
 <body> <!---->
@@ -13,8 +14,7 @@
         <div class ="barra_izquierda">
             <ul class = "menu_izquierda" >
                 <li><a href="about.html">Nosotros </a></li>
-                <li><a href="#">Contacto </a></li>
-                <li><a href="gamepublish.html">Publicar </a></li>
+                <li><a href="#">Contacto</a></li>
                 <li><a href="catalogo.html">Catalogo</a></li>
             </ul>
         </div>
@@ -35,25 +35,189 @@
         
     </header>   
     <div class="cuerpo">
-        AAAAAA <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia tempora numquam voluptatem neque hic labore iusto unde ipsam quaerat rerum?
+        <h1>Novedades</h1> 
+    </div>
+    <div class="catalogo">
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="producto.html">
+                    <img src="images/cornifer.webp" alt="cornifer" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Cornifer plush</h4>
+            <p class="descripcion">A Cornifer plushie</p>
+            <a href="producto.html" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/hollowKnight.webp" alt="jolou nai" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Hollow Knight</h4>
+            <p class="descripcion">Hollow Knight physical edition</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/lancer.webp" alt="lancer" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Lancer pin</h4>
+            <p class="descripcion">A Lancer pin</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/nikoplush.webp" alt="nikoplush" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Niko plush</h4>
+            <p class="descripcion">A Niko plushie</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/omori.webp" alt="omori" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Omori game</h4>
+            <p class="descripcion">Omori physical edition</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/celeste.webp" alt="celeste" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Celeste pin</h4>
+            <p class="descripcion">A Badeline pin</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/ori.webp" alt="ori" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Ori t-shirt</h4>
+            <p class="descripcion">An Ori and the Will <br> of the Wisp t-shirt</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/kuplush.webp" alt="ku" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Ku plush</h4>
+            <p class="descripcion">A Ku plushie</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+    </div>
+    <div class="cuerpo">
+        <h1>Productos destacados</h1>
+    </div>
+    <div class="catalogo">
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/nikoposter.webp" alt="nikoposter" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Niko poster</h4>
+            <p class="descripcion">A Oneshot poster</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/hkjournal.webp" alt="hkjournal" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">HK hunter's journal</h4>
+            <p class="descripcion">A Hollow knight artbook</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <img src="images/solstice.webp" alt="solstice" class="image-producto">
+            </div>
+            <h4 class="tit_prod">Solstice pins</h4>
+            <p class="descripcion">Oneshot solstice pins</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/monsterhunter.webp" alt="monsterhunter" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">MH pins</h4>
+            <p class="descripcion">Monster Hunter pins</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/rathalos.webp" alt="rathalos" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Rathalos hoodie</h4>
+            <p class="descripcion">A rathalos hoodie</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/MH.webp" alt="MH" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">MH cats</h4>
+            <p class="descripcion">A Monster Hunter t-shirt</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/oripines.webp" alt="oripines" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Ori pins</h4>
+            <p class="descripcion">Ori and the blind forest pins</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
+        <div class="producto">
+            <div class="fondo-image">
+                <a href="#">
+                    <img src="images/deltarune1.webp" alt="deltarune1" class="image-producto">
+                </a>
+            </div>
+            <h4 class="tit_prod">Deltarune ch.1 poster</h4>
+            <p class="descripcion">A chapter 1 deltarune poster</p>
+            <a href="#" class="button">Comprar</a>
+        </div>
     </div>
     
     <footer class="footer">
         <div class= "barra_derecha">
             <ul class = "menu_derecha" >
                 <li>
-                    <a href="https://www.twitter.com/gabrielboric">
+                    <a href="https://www.twitter.com/">
                         <img src="images/twistter.png" alt="Logo" width="30" height="30">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.twitter.com/gabrielboric">
-                        <img src="images/CuckStagram.png" alt="Logo" width="30" height="30">
+                    <a href="https://www.instagram.com/">
+                        <img src="images/ig.png" alt="Logo" width="30" height="30">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.twitter.com/gabrielboric">
+                    <a href="https://www.facebook.com/">
                         <img src="images/caraLibro.png" alt="Logo" width="30" height="30">
                     </a>
                 </li>
